--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ TestMvcService/.vs/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+TestMvcService/.vs/TestMvcService/v14/.suo
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
