--- a/TestMvcService/PrologTest/PrologTest.csproj
+++ b/TestMvcService/PrologTest/PrologTest.csproj
@@ -32,8 +32,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="amzinet, Version=2.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="amzinet">
       <HintPath>..\amzinet.dll</HintPath>
     </Reference>
     <Reference Include="System" />
